[package]
name    = "bane"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Terminal user interfaces."
repository  = "https://github.com/meh/rust-bane"
keywords    = ["terminal", "tui", "curses"]

[dependencies]
libc        = "0.2"
chan        = "0.1"
lazy_static = "0.2"
bitflags    = "0.7"
fnv         = "1.0"

control-code = "0.7"
terminfo     = "0.4"
termios      = "0.2"
